<resources>
    <string name="app_name">CalcBMR</string>
    <string name="eW">وزن خود را به کیلو گرم وارد کنید</string>
    <string name="eH">قد خود را به سانتی متر وارد کنید</string>
    <string name="eA">سن خود را وارد کنید</string>
    <string name="btnCalc">محاسبه کن</string>
    <string name="men">مرد</string>
    <string name="women">زن</string>
    <string name="btnAboutBMR">BMR چیست؟</string>
    <string name="site">SchoolHelp.ir</string>
    <string name="btnBack">بازگشت</string>
    <string name="btnClear">پاک کردن</string>
</resources>
