<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/bmrpic"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <EditText
        android:id="@+id/edtWeigh"
        android:textSize="24sp"
        android:textDirection="rtl"
        android:hint="@string/eW"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="60dp"/>
    <EditText
        android:id="@+id/edtHeight"
        android:textSize="24sp"
        android:textDirection="rtl"
        android:hint="@string/eH"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="60dp"/>
    <EditText
        android:id="@+id/edtAge"
        android:textSize="24sp"
        android:textDirection="rtl"
        android:hint="@string/eA"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="60dp"/>
    <RadioGroup
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:textSize="24sp"
            android:textDirection="rtl"
            android:layoutDirection="rtl"
            android:text="@string/men"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:textSize="24sp"
            android:textDirection="rtl"
            android:layoutDirection="rtl"
            android:layout_gravity="center"
            android:text="@string/women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcBMR"
        android:textSize="24sp"
        android:text="@string/btnCalc"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="60dp"/>
    <TextView
        android:text="مقدار متابولیوسم:"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textDirection="rtl"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="کالری مورد نیاز روزانه:"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textDirection="rtl"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnAboutBMR"
        android:textSize="24sp"
        android:text="@string/btnAboutBMR"
        android:textDirection="rtl"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="60dp"/>
    <TextView
        android:id="@+id/tvSiteUrl"
        android:text="@string/site"
        android:textSize="24sp"
        android:textColor="@color/lightBlue"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>